fix: correct wrapping of user tooltip

--- a/res/css/views/rooms/_ReadReceiptGroup.scss
+++ b/res/css/views/rooms/_ReadReceiptGroup.scss
@@ -124,3 +124,9 @@
         }
     }
 }
+
+.mx_ReadReceiptGroup_person--tooltip {
+    overflow-y: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
